--- a/Filters/Web.config
+++ b/Filters/Web.config
@@ -13,6 +13,14 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880">
+        <credentials passwordFormat="Clear">
+          <user name="user" password="secret"/>
+          <user name="admin" password="admpass"/>
+        </credentials>
+      </forms>
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
